Front-end alignment of Cards fixed by Kevin. Event handlers for bulletin and Release Edit finished by Louie.

--- a/css/dewslandslide/public_alert/timelinev1.css
+++ b/css/dewslandslide/public_alert/timelinev1.css
@@ -556,3 +556,6 @@ h3.popover-title { font-weight: bold; font-size: 16px!important; background: #C0
     right: 0;
 }
 
+.btn {
+    border-radius: 0px !important; 
+}
